# useragent_id

./: .gitignore  .kilocodemodes  Cargo.toml  Gemini.txt  LLM-Calls-Orchestrator-flow.http  README.md  SOLUTION_SUMMARY.md  SSH_SETUP.md  WasmAgentTrainer-old.code-workspace  configure-git-ssh.sh  git-ssh.sh  main.rs  orchestrator-responds.json  server-return-call-llm.json  setup-ssh-keys.sh  team-notes.txt  test-ssh-connection.sh  train.js
.github/: copilot-instructions.md
.github/prompts/: rules.prompt.md
.github/workflows/: deploy-dashboard-web.yml
.ssh/: .gitkeep
agents/echo_wasm/: Cargo.toml  build.sh
agents/echo_wasm/src/: lib.rs
agents/scraper_chromiumoxide/: Cargo.toml
agents/scraper_chromiumoxide/src/: main.rs
apps/agent-runner/: Cargo.toml  README.md
apps/agent-runner/src/: loader.rs  ui.rs
apps/agent-trainer/: README.md
apps/agent-trainer/src/: main.rs  persistence.rs  ui.rs
apps/dashboard/: README.md
apps/dashboard/src/: index.html  main.rs  package.json  replay.rs  sessions.rs  tailwind.config.js  ui.rs
apps/dashboard/web/: package-lock.json  package.json  vite.config.js
apps/status-api/: Cargo.toml  Dockerfile
apps/task-learner/: Cargo.toml
apps/task-learner/src/: advanced_collector.rs  collector.rs  learner.rs  main.rs
apps/user-monitor/: README.md
apps/user-monitor/src/: agent.rs  analyzer.rs  dom_recorder.js  narration.rs  persistence.rs  recorder.rs  voice.rs  wasm_analyzer.rs
data/: internal.jsonl
eval/src/: lib.rs
gm_ml/: elon-email.txt
memory/src/: lib.rs
onboarding/llm-intro/: create-session.json  run-automation.json
planner/: Cargo.toml
planner/src/: actor.rs  circuit.rs  client.rs  fallback.rs  feedback.rs  integration_tests.rs  lib.rs  planner.rs  security.rs
planner/src/client/: mock.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/core/: config.rs  constants.rs  mod.rs
src/: main.rs
src/api/: routes.rs
src/core/: advanced_scraper.rs  mod.rs
traces/: trace_00000000-0000-0000-0000-000000000001_1756194036.json
train/src/: dataset_builder.rs  main.rs
useragent_id/: Cargo.toml  README.md  SYSTEM_OVERVIEW.md
useragent_id/.github/tools/: README.md  install.sh  phi_helper.py
useragent_id/agents/dispatcher/: Cargo.toml
useragent_id/agents/dispatcher/examples/: run_echo.rs
useragent_id/agents/dispatcher/src/: lib.rs
useragent_id/agents/echo_wasm/: README.md
useragent_id/apps/agent-runner/: Cargo.toml
useragent_id/apps/agent-runner/src/: executor.rs  main.rs  ui.rs
useragent_id/apps/agent-runner/trained-agents/: echo-wasm.json
useragent_id/apps/agent-trainer/: Cargo.toml
useragent_id/apps/agent-trainer/src/: loader.rs  trainer.rs
useragent_id/apps/dashboard/: Cargo.toml
useragent_id/apps/dashboard/src/: package-lock.json  sessions.rs  ui.rs  vite.config.js
useragent_id/apps/dashboard/src/src/: App.jsx  index.css
useragent_id/apps/dashboard/web/: README.md  index.html
useragent_id/apps/dashboard/web/src/: App.jsx  index.css
useragent_id/apps/status-api/: Dockerfile
useragent_id/apps/status-api/src/: main.rs
useragent_id/apps/task-learner/: README.md
useragent_id/apps/task-learner/src/: persistence.rs  understanding.rs
useragent_id/apps/user-monitor/: Cargo.toml  package.json
useragent_id/apps/user-monitor/src/: automation.rs  dom_replayer.js  main.rs  monitor.rs  ui.rs  visualization.rs
useragent_id/apps/user-monitor/src/wasm/: agent_module.rs
useragent_id/data/default/events/: session_72210194-8cbd-41a8-9a54-7d561ad9d43b.jsonl
useragent_id/eval/: Cargo.toml
useragent_id/memory/: Cargo.toml
useragent_id/planner/src/: cache.rs  capability.rs  feedback_tests.rs  task.rs  tests.rs  types.rs
useragent_id/shared/: Cargo.toml
useragent_id/shared/src/: types.rs
useragent_id/src/: lib.rs
useragent_id/src/core/: scraper.rs
useragent_id/train/: Cargo.toml
useragent_id/trained-agents/: echo-wasm.json
