[workspace]
resolver = "2"
members = [
    "apps/agent-runner",
    "apps/agent-trainer",
    "apps/task-learner",
    "apps/user-monitor",
    "apps/dashboard",
    "apps/status-api",
    "shared",
    "memory",
    "planner",
    "eval",
    "agents/dispatcher",
    "agents/echo_wasm",
    "agents/scraper_chromiumoxide",
    "train",
]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5.12"
dirs = "5.0"
eframe = "0.27.2"
glob = "0.3.1"
notify = "6.1.1"
rdev = "0.5.3"
rfd = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
thirtyfour = "0.34.0"
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
