[package]
name = "scraper_chromiumoxide"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chromiumoxide = "0.6"
futures-util = "0.3"
