[package]
name = "task-learner"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared", features = ["events"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
eframe = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
glob = { workspace = true }
tracing-subscriber = { workspace = true }
rdev = { workspace = true }
