[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
anyhow = { workspace = true }
eframe = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde", "v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = { workspace = true }
