[package]
name = "user-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared", features = ["events"] }
anyhow = { workspace = true }
eframe = { workspace = true }
rdev = { workspace = true }
crossbeam-channel = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
notify = { workspace = true }
which = "6.0.3"
